se corrigieron las cabeceras de los archivos, y se movieron los archivos al fichero raiz

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(P0_2025 C)
 set(CMAKE_C_STANDARD 99)
 
 add_executable(P0_2025 main.c
-        cmake-build-debug/rational_struct.c
-        cmake-build-debug/rational_struct.h
-        cmake-build-debug/rational_pointer.c
-        cmake-build-debug/rational_pointer.h)
+        rational_struct.c
+        rational_struct.h
+        rational_pointer.c
+        rational_pointer.h)
