--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,5 @@ project(Practicas_PRO2_2025 C)
 
 set(CMAKE_C_STANDARD 99)
 
-# Agregar cada práctica como subdirectorio
+# agregar cada practica como subdirectorio
 add_subdirectory(P0)
-# add_subdirectory(P1)  # Descomenta y agrega más prácticas según sea necesario
